# db_ai_assistent

./: .env.template  .gitignore  Dockerfile  Dockerfile-ollama  docker-compose.yaml  pyproject.toml  requirements.txt
api/: Dockerfile  alembic.ini  config.py  db_parsing.py  llm_client.py  logger.py  main.py  redis_client.py  redis_history.py  responses.py  schemas.py  services.py  sql_runner.py  translator.py  utils.py
api/admin/: model_admin.py  user_creation.py
api/alembic/: env.py
api/alembic/versions/: 2025_05_28_1125-272db733c112_init.py  2025_05_28_1250-f08a57274b5c_init.py  2025_05_28_1350-3308cb23962b_make_relationship_one_to_one.py  2025_05_28_1456-1f91b2dd9fa1_initial.py  2025_05_28_1510-de5d672ff124_add_translated_user_question.py  2025_05_30_0930-0126a6626686_add_timestamp.py  2025_06_04_1124-311cd866f953_add_models_user_and_useradmin.py  2025_06_05_1118-68334e9a748c_change_db_structure.py
api/auth/: auth_routers.py  backend.py  strategy.py  transport.py  user_manager.py
api/crud/: message_feedback.py  messages.py
api/database/: base.py  db.py
api/db_parsing/: sqlite_parse.py  test_db_schema.py  vertica_parse.py  vertica_parse_v2.py
api/exception_handlers/: unauth_handler.py
api/llm_clients/: mistral_client.py
api/llm_clients/mistral/: mistral_client.py  mistral_client_depr.py  prompts.py
api/llms/: base_llm.py  base_prompt.py  embeddings.py  llms.py  prompts.py  simple_rag.ipynb
api/llms/codellama_7b/: client.py
api/llms/deepseek_coder_1_3b/: client.py
api/llms/deepseek_coder_6_7b/: client.py
api/llms/deepseek_r1/: client.py
api/llms/llama_3_1/: client.py
api/llms/llama_3_2/: client.py
api/llms/mistral/: client.py  mistral_client.py  prompts.py
api/models/: access_token.py  bot_message.py  message_feedback.py  message_review.py  user.py
api/models/mixins/: id_int_pk.py
api/routes/: chatting.py  message_feedback.py  message_review.py  router.py  templates.py  users.py
api/sql_executors/: executor.py  sqlite_runner.py  vertica_runner.py
api/static/: index.html
api/test_rag/: simple_rag.ipynb
api/utils/: check_table.py
frontend/: admin.html  index.html  login.html  main.js  style.css
frontend/css/: admin.css  style.css
frontend/js/: admin.js  login.js  logout.js  main.js
