[project]
name = "db-ai-assistent"
version = "0.1.0"
description = ""
authors = [
    {name = "ratmir",email = "ratmir2020.1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi==0.115.9",
    "uvicorn (>=0.34.2,<0.35.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "certifi (>=2025.4.26,<2026.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "vertica-python (>=1.4.0,<2.0.0)",
    "langchain-core (>=0.3.59,<0.4.0)",
    "langchain-community (>=0.3.24,<0.4.0)",
    "langchain-ollama (>=0.3.3,<0.4.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-chroma (>=0.2.4,<0.3.0)",
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.2.0"
mypy = "^1.15.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
